Preparations for release of version 0.12
Some minor corrections were necessary for the 12th release of Gnuastro.

--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 Copyright (C) 2015-2020 Free Software Foundation, Inc.
 See the end of the file for license conditions.
 
-* Noteworthy changes in release X.XX (library X.X.X) (YYYY-MM-DD) [stable]
+* Noteworthy changes in release 0.12 (library 10.0.0) (2020-05-20) [stable]
 
 ** New features
 
