--- a/THANKS
+++ b/THANKS
@@ -20,6 +20,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
 
     Valentina Abril-melgarejo            valentina.abril@lam.fr
     Marjan Akbari                        mrjakbari@gmail.com
+    Carlos Allende Prieto                callende@iac.es
     Hamed Altafi                         hamed.altafi2@gmail.com
     Roland Bacon                         roland.bacon@univ-lyon1.fr
     Roberto Baena Gallé                  rbaena@iac.es
