--- a/NEWS
+++ b/NEWS
@@ -22,7 +22,10 @@ See the end of the file for license conditions.
      file. The inverse conversion is also supported (from SIP to TPV).
 
   Library:
+   - GAL_CONFIG_HAVE_WCSLIB_DIS_H: if the host's WCSLIB supports distortions.
+   - GAL_CONFIG_HAVE_WCSLIB_MJDREF: if the host's WCSLIB reads MJDREF keyword.
    - GAL_WCS_FLTERROR: Limit to identify a floating point error for WCS.
+   - gal_wcs_write: Write the given WCS into a FITS extension with no data.
    - gal_wcs_clean_errors: clean major WCS components from errors specified
        by the FITS keyword 'CRDER', or floating point errors.
    - gal_wcs_distortion_from_string: Return distortion string/name from ID.
